[gd_scene load_steps=12 format=2]

[ext_resource path="res://Source/Fonts/DejaVuSansMono.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Source/Scenes/StartingCutscene.gd" type="Script" id=2]
[ext_resource path="res://Source/Scenes/ChatUIStartingCutscene.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("../Start_Label:visible_characters")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=4]
resource_name = "StartingCutscene"
length = 10.0

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=8]
resource_name = "StartingCutsceneChatUI"
length = 5.3
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.3, 0.9, 1.4, 2, 2.5, 3.1, 3.6, 4.2, 4.7, 5.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"values": [ {
"args": [ "Hi" ],
"method": "add_selfSentMessage"
}, {
"args": [ "Hey Whatsup?" ],
"method": "add_new_chatMessage"
}, {
"args": [ "Is the anti-worm program ready?" ],
"method": "add_selfSentMessage"
}, {
"args": [ "Yep it is, if we can get the program on at-least 30% of the world's computer's" ],
"method": "add_new_chatMessage"
}, {
"args": [ "Then we can defeat the worm since the program modify's the worms code to destory the other worms" ],
"method": "add_new_chatMessage"
}, {
"args": [ "Are you using the modified version of DragonX??" ],
"method": "add_new_chatMessage"
}, {
"args": [ "Yes" ],
"method": "add_selfSentMessage"
}, {
"args": [ "Alright then, I will send you the anti-worm program and a script to get remote access to computer's infected" ],
"method": "add_new_chatMessage"
}, {
"args": [ "Sounds Good!" ],
"method": "add_selfSentMessage"
}, {
"args": [  ],
"method": "end_chatScene"
} ]
}

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start_Label" type="Label" parent="Control"]
margin_left = 1.0
margin_top = 3.0
margin_right = 442.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "DRAGONX PEER-TO-PEER (P2P) NETWORK CHAT SOFTWARE:
CHOOSE P2P NETWORK TO CONNECT:

"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Control"]
visible = false
margin_left = 1.0
margin_top = 52.0
margin_right = 250.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 2 )
text = "COMPUTER_01927"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Control"]
visible = false
margin_left = 1.0
margin_top = 72.0
margin_right = 253.0
margin_bottom = 93.0
custom_fonts/font = SubResource( 2 )
text = "COMPUTER_08372 [UNAVAILABLE]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Control"]
visible = false
margin_left = 1.0
margin_top = 93.0
margin_right = 253.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 2 )
text = "COMPUTER_07465 [UNAVAILABLE]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
root_node = NodePath("../..")
anims/RESET = SubResource( 3 )
anims/StartingCutscene = SubResource( 4 )

[node name="Timer1" type="Timer" parent="Control"]
wait_time = 1.5
one_shot = true

[node name="Timer2" type="Timer" parent="Control"]
wait_time = 1.3
one_shot = true

[node name="Timer3" type="Timer" parent="Control"]
one_shot = true

[node name="Timer4" type="Timer" parent="Control"]
wait_time = 1.4
one_shot = true

[node name="ChatUI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect2" type="ColorRect" parent="ChatUI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.0313726, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="ChatUI"]
margin_left = 7.0
margin_top = 335.0
margin_right = 1020.0
margin_bottom = 524.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ChatUI/ScrollContainer"]
theme = SubResource( 6 )
custom_constants/separation = 4

[node name="ColorRect" type="ColorRect" parent="ChatUI"]
margin_top = 567.0
margin_right = 1024.0
margin_bottom = 587.0
color = Color( 0.501961, 0.501961, 0.501961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendMessagetoComputer" type="Label" parent="ChatUI/ColorRect"]
margin_left = 6.0
margin_top = -29.0
margin_right = 126.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 7 )
text = "Send a Message to 'COMPUTER_09383'"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SendMessageLabel" type="Label" parent="ChatUI/ColorRect"]
margin_left = 6.0
margin_top = 1.0
margin_right = 346.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ChatUI"]
playback_speed = 0.2
anims/StartingCutsceneChatUI = SubResource( 8 )

[node name="Timer1" type="Timer" parent="ChatUI"]
wait_time = 1.5

[connection signal="timeout" from="Control/Timer1" to="." method="_on_Timer1_timeout"]
[connection signal="timeout" from="Control/Timer1" to="Control" method="_on_Timer1_timeout"]
[connection signal="timeout" from="Control/Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Control/Timer2" to="Control" method="_on_Timer2_timeout"]
[connection signal="timeout" from="Control/Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Control/Timer3" to="Control" method="_on_Timer3_timeout"]
[connection signal="timeout" from="Control/Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Control/Timer4" to="Control" method="_on_Timer4_timeout"]
[connection signal="timeout" from="Control/Timer4" to="ChatUI" method="_on_Timer4_timeout"]
[connection signal="timeout" from="ChatUI/Timer1" to="ChatUI" method="_on_Timer1_timeout"]
